# bcachefs-tools

./: .bcachefs_revision  .editorconfig  .gitignore  INSTALL.md  Makefile  README.md  base.nix  bcachefs.8  bcachefs.c  binary.nix  build.nix  cmd_attr.c  cmd_data.c  cmd_debug.c  cmd_device.c  cmd_dump.c  cmd_format.c  cmd_fs.c  cmd_fsck.c  cmd_fusemount.c  cmd_key.c  cmd_kill_btree_node.c  cmd_list.c  cmd_list_journal.c  cmd_migrate.c  cmd_option.c  cmds.h  crypto.c  crypto.h  default.nix  flake.nix  libbcachefs.c  libbcachefs.h  mount.bcachefs  shell.nix  tools-util.c  tools-util.h
.github/workflows/: build-packages.yml
debian/: control  copyright
doc/: bcachefs-principles-of-operation.tex
include/linux/: atomic.h  bio.h  bit_spinlock.h  bitops.h  blk_types.h  blkdev.h  bug.h  bvec.h  compiler.h  errname.h  freezer.h  jiffies.h  kernel.h  kobject.h  list.h  mean_and_variance.h  mm.h  prandom.h  prefetch.h  printk.h  random.h  rcupdate.h  rwsem.h  sched.h  seq_buf.h  shrinker.h  slab.h  spinlock.h  string.h  string_helpers.h  (+3 more)
libbcachefs/: alloc_background.c  alloc_background.h  alloc_foreground.c  alloc_types.h  backpointers.c  bcachefs_format.h  btree_gc.c  btree_io.c  btree_iter.c  btree_iter.h  btree_locking.c  btree_locking.h  btree_types.h  btree_update_leaf.c  checksum.c  checksum.h  data_update.c  ec.c  error.c  extents.c  fs-io.c  fs.c  fsck.c  io.c  move.c  move.h  movinggc.c  opts.c  str_hash.h  super-io.c  super-io.h  super.c  util.h
linux/: bio.c  blkdev.c  kthread.c  printbuf.c  printbuf_userspace.c  ratelimit.c  seq_buf.c  shrinker.c  six.c  string.c  string_helpers.c  wait.c
nix/: overlay.nix
packaging/: bcachefs-tools.spec
rust-src/: Cargo.toml
rust-src/bch_bindgen/: Cargo.toml  build.rs  default.nix  rustfmt.toml
rust-src/bch_bindgen/src/: bcachefs.rs  bkey.rs  btree.rs  errcode.rs  fs.rs  lib.rs  libbcachefs_wrapper.h  log.rs  opts.rs  rs.rs
rust-src/mount/: Cargo.toml  default.nix
rust-src/mount/src/: filesystem.rs  key.rs  lib.rs  main.rs
(+8 files in other folders)
