[package]
name = "bch_bindgen"
version = "0.1.0"
authors = [ "Kayla Firestack <dev@kaylafire.me>", "Yuxuan Shui <yshuiv7@gmail.com>" ]
edition = "2018"

[lib]
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
anyhow = "1.0"
udev = "0.7.0"
uuid = "1.2.2"
bitfield = "0.14.0"
memoffset = "0.8.0"
byteorder = "1.3"
tracing-attributes = "0.1.15"
libc = "0.2.69"
gag = "1.0.0"


[build-dependencies]
pkg-config = "0.3"
bindgen = { version = "0.63", default-features = false }
