[package]
name = "bcachefs-mount"
version = "0.3.1"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>", "Kayla Firestack <dev@kaylafire.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
log = "0.4"
chrono = "0.4"
colored = "2"
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
anyhow = "1.0"
libc = "0.2.69"
udev = "0.7.0"
uuid = "1.2.2"
gag = "1.0.0"
getset = "0.1"
itertools = "0.9"
parse-display = "0.1"
errno = "0.2"
either = "1.5"
rpassword = "4"
bch_bindgen = { path = "../bch_bindgen" }
byteorder = "1.3"
